[package]
name = "openesoui-mm"
version = "0.2.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
zip = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0.0"
clap = { version = "4.5", features = ["derive"] }
scraper = "0.23"
regex = "1.11"